# zot-cell

./: Cargo.toml  README.md  cube.csv
.github/workflows/: audit.yml  benchmark-cube.yml  benchmark.yml  build.yml  release.yml
src/: cube.rs  main.rs
